@@ -1,4 +1,4 @@
-%% Copyright (C) 2014, 2016-2017, 2022 Colin B. Macdonald
+%% Copyright (C) 2014, 2016-2017, 2022-2023 Colin B. Macdonald
 %% Copyright (C) 2016 Lagu
 %% Copyright (C) 2016 Abhinav Tripathi
 %% Copyright (C) 2017 NVS Abhilash
@@ -273,6 +273,10 @@ end
 %! % issue #445
 %! A = sym([1 2; 3 4]);
 %! A(1, sym(4)/3)
+
+%!error <out of bound>
+%! A = sym([1 2; 3 4]);
+%! A(5)
 
 %!shared a, b
 %! a = [1 2 3 5; 4 5 6 9; 7 5 3 2];
